[package]
name = "lux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
colored = "2.0.0"
glam = "0.22.0"
openexr = "0.11.0"
exr = "1.5.2"
smallvec = "1.10.0"

[profile.release]
opt-level = 3